--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -10,8 +10,9 @@
 
 
 .thumbs_container {
-    display: flex;
-    flex-wrap: wrap;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 340px);
     gap: 60px 50px;
-    margin: 0 auto;
+    justify-content: center;
 }
